Added second collections and updated the server.js file and created validate2.js and database2.js and updated the swagger file
